--- a/systemArticles.html
+++ b/systemArticles.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLi"><a href="systemArticles.html">מאמרי מערכת</a></li>
+                <li id="mainNavLastLi"><a href="systemArticles.html">מאמרי מערכת</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
