--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -34,7 +34,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLiNotBold"><a href="vacuumCookingMethodAarticle.html">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a> </li>
+                <li id="mainNavLastLiNotBold"><a href="vacuumCookingMethodAarticle.html">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a> </li>
             </ul>
         </nav>
         <div class="clear"></div>
