--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLi"><a href="fiencookHouse.html">בית פיין קוק</a></li>
+                <li id="mainNavLastLi"><a href="fiencookHouse.html">בית פיין קוק</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
