--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -104,12 +104,12 @@
                 <input type="search" id="search" placeholder="חפש" />
             </form>
         </section>
-        <nav id="asideNavTopContentvodkaWatermellon">
+        <nav class="asideNavTopContentvodkaWatermellon">
             <ul>
                 <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="recipes.html" class="orange">מתכונים</a></li>
+                <li><a href="recipes.html" id="orange">מתכונים</a></li>
             </ul>
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
