--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -114,7 +114,7 @@
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
                 <ul id="ulInnerRecipesTermo">
-                    <li><a href="fullRiceRecipe.html" id="orange"> אורז מלא בלימון ועשבי תיבול</a></li>
+                    <li><a href="fullRiceRecipe.html" class="orange"> אורז מלא בלימון ועשבי תיבול</a></li>
                     <li><a href="vodkaWatermellon.html">שאט של וודקה אבטיח</a></li>
                     <li><a href="coldCoffe.html">קפה קר ללא לקטוז</a></li>
                     <li><a href="#">דואט קנולי</a></li>
