--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -109,7 +109,7 @@
                 <li><a href="systemArticles.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="recipes.html" id="orange">מתכונים</a></li>
+                <li><a href="recipes.html" class="orange">מתכונים</a></li>
             </ul>
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
