--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -67,7 +67,7 @@
                 <p>מחלקת התבלינים בבית פיין קוק החדש</p>
             </section>
             <section id="fiencookArticlePara">
-                <p id="fiencookArticleParaFirst">FEIN COOK ממקמת את עצמה בחזית הידע והמגמות המשתנות בעולם כדי לקחת חלק במהפכה
+                <p>FEIN COOK ממקמת את עצמה בחזית הידע והמגמות המשתנות בעולם כדי לקחת חלק במהפכה
                     הקולינארית המתחוללת בארץ, ולהוביל את אומנות הבישול צעד נוסף קדימה. בבית FEIN COOK
                     מאתרים מכונות מזון וציוד עזר למטבח הביתי והמקצועי מכל רחבי העולם.</p>
                 <p>אנו בוחרים את המכשירים המתקדמים בעולם באיכותם ובחדשנותם אשר משפרים את המקצוענות,
