--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -90,7 +90,7 @@
                     <li><a href="#">הדפסה</a></li>
                     <img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild">
                     <li><a href="#">הקודם</a></li>
-                    <li id="sendRecipesUlLiLastChild"><a href="#">הבא</a></li>
+                    <li><a href="#">הבא</a></li>
                     <img src="images/orangeArrow.png">
                 </ul>
             </section>
