--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="clearfix">
                     <li>
                         <a href="#"><img id="appMenuImg" src=""></a>
-                        <ul class="sub-menu">
+                        <ul class="sub-menu" id="appMenuWidth">
                             <li id="asideNavCenterTitle">עולמות תוכן</li>
                             <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
                             <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
