--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="topNav">
                 <ul class="clearfix">
                     <li>
-                        <a href="#"><img id="appMenuImg" src=""></a>
+                        <img id="appMenuImg" src="images/appMenu.png">
                         <ul class="sub-menu" id="appMenuWidth">
                             <li id="asideNavCenterTitle">עולמות תוכן</li>
                             <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
