--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <a href="index.html" id="logo"></a>
         <section id ="appMenu">
-            <nav class="topNav">
+            <nav class="topNav" id="appMenuBorderNone">
                 <ul class="clearfix">
-                    <li>
+                    <li id=appMenuBorderNone">
                         <img id="appMenuImg" src="images/appMenu.png">
                         <ul class="sub-menu" id="appMenuWidth">
                             <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
