--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -8,7 +8,6 @@
     <script src="includes/recipeSlider.js"></script>
     <link rel="stylesheet" href="includes/style.css">
 </head>
-
 <body>
 <div class="recipesWrapper">
     <header>
@@ -36,7 +35,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="recipes.html">מתכונים</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="fullRiceRecipe.html" id="orangeRecipesLogo">קפה קר ללא לקטוז</a></li>
+                <li><a href="coldCoffe.html" id="orangeRecipesLogo">קפה קר ללא לקטוז</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -57,7 +56,6 @@
                     <p>3. מוסיפים את מיץ הלימון, המים והוודקה ומערבבים 30 שניות במהירות 6</p>
                     <p>4. שומרים בקירור!</p>
                 </section>
-
                 <section id="picsSlider">
                     <ul class="recipeTrigger">
                         <li>5\1 דפדפו בין התמונות</li>
@@ -79,25 +77,22 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
-
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
-
             <section id="sendRecipes">
                 <p>שלח לנו מתכון!</p>
                 <ul>
                     <li><a href="#">הדפסה</a></li>
                     <img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild">
-                    <li><a href="#">הקודם</a></li>
-                    <li><a href="#">הבא</a></li>
+                    <li><a href="vodkaWatermellon.html">הקודם</a></li>
+                    <li><a href="fullRiceRecipe.html">הבא</a></li>
                     <img src="images/orangeArrow.png">
                 </ul>
             </section>
             <div class="clear"></div>
             </article>
         </section>
-
     </main>
     <aside id="vodkaWatermellonaside">
         <section id="asideSearch">
@@ -165,7 +160,7 @@
         </section>
         <nav id="footerNav">
             <ul>
-                <li><a href="#">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
