--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -8,7 +8,6 @@
     <script src="includes/scripts.js"></script>
     <link rel="stylesheet" href="includes/style.css">
 </head>
-
 <body>
 <div class="recipesWrapper">
     <header>
@@ -49,7 +48,6 @@
                 <section class="articleStyleRecipes">
                     <p class="articleStyleBoldPara">החומרים</p>
                 </section>
-
                 <section>
                     <p class="articleStyleBoldPara">אופן ההכנה</p>
                     <p>1. שוקלים את הסוכר ישירות לקערת התרמומיקס וטוחנים 10 שניות במהירות 10</p>
@@ -79,18 +77,16 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
-
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
-
             <section id="sendRecipes">
                 <p>שלח לנו מתכון!</p>
                 <ul>
                     <li><a href="#">הדפסה</a></li>
                     <img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild">
-                    <li><a href="#">הקודם</a></li>
-                    <li><a href="#">הבא</a></li>
+                    <li><a href="coldCoffe.html">הקודם</a></li>
+                    <li><a href=vodkaWatermellon.html#">הבא</a></li>
                     <img src="images/orangeArrow.png">
                 </ul>
             </section>
@@ -164,7 +160,7 @@
         </section>
         <nav id="footerNav">
             <ul>
-                <li><a href="#">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
