--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             </nav>
         </section>
     </header>
-
     <section id='responsiveTopNav'>
         <nav class="topNav">
             <ul class="clearfix">
@@ -181,8 +180,6 @@
                 <input type="submit" id="submit" class="ContactForm" value="הרשם" >
             </form>
         </section>
-
-
         <section id="asideEnd">
             <p>מתנדבים למען הקהילה</p>
         </section>
@@ -209,7 +206,7 @@
         </section>
         <nav id="footerNav">
             <ul>
-                <li><a href="#">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
                 <li><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
