--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -8,7 +8,6 @@
     <script src="includes/recipeSlider.js"></script>
     <link rel="stylesheet" href="includes/style.css">
 </head>
-
 <body>
 <div class="recipesWrapper">
     <header>
@@ -49,7 +48,6 @@
                 <section class="articleStyleRecipes">
                     <p class="articleStyleBoldPara">החומרים</p>
                 </section>
-
                 <section>
                     <p class="articleStyleBoldPara">אופן ההכנה</p>
                     <p>1. שוקלים את הסוכר ישירות לקערת התרמומיקס וטוחנים 10 שניות במהירות 10</p>
@@ -57,7 +55,6 @@
                     <p>3. מוסיפים את מיץ הלימון, המים והוודקה ומערבבים 30 שניות במהירות 6</p>
                     <p>4. שומרים בקירור!</p>
                 </section>
-
                 <section id="picsSlider">
                     <ul class="recipeTrigger">
                         <li>5\1 דפדפו בין התמונות</li>
@@ -79,18 +76,16 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
                     </section>
-
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
-
             <section id="sendRecipes">
                 <p>שלח לנו מתכון!</p>
                 <ul>
                     <li><a href="#">הדפסה</a></li>
                     <img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild">
-                    <li><a href="#">הקודם</a></li>
-                    <li><a href="#">הבא</a></li>
+                    <li><a href="fullRiceRecipe.html">הקודם</a></li>
+                    <li><a href="coldCoffe.html">הבא</a></li>
                     <img src="images/orangeArrow.png">
                 </ul>
             </section>
@@ -137,8 +132,8 @@
         <nav id="asideNavBottom">
             <ul>
                 <li id="asideNavBottom1"><a href="#">לפורום שלנו</a></li>
-                <li id="asideNavBottom2"><a href="#">מתכונים</a></li>
-                <li id="asideNavBottom3"><a href="#">צור עמנו קשר!</a></li>
+                <li id="asideNavBottom2"><a href="recipes.html">מתכונים</a></li>
+                <li id="asideNavBottom3"><a href="conatctForm.html">צור עמנו קשר!</a></li>
             </ul>
         </nav>
     </aside>
@@ -164,7 +159,7 @@
         </section>
         <nav id="footerNav">
             <ul>
-                <li><a href="#">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
