little changes my brother from another mother you little cocksucker

--- a/conatctForm.html
+++ b/conatctForm.html
@@ -30,22 +30,22 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/yellowArrow.jpg" id="brownArrowImg"></li>
-                <li><a href="systemArticles.html">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
         <section id="conatactFormAarticleStyle">
             <h2 id="articleHeader">צור קשר</h2>
             <section id="contactFormAarticleStyle">
-                <h2>שלחו לנו מייל</h2>
-                    <form>
-                        <p>שם פרטי ומשפחה*</p><input type="text" class="formField">
-                        <p>טלפון</p><input type="text" class="formField">
-                        <p>כתובת אי-מייל*</p><input type="text" class="formField">
-                        <p>נושא ההודעה</p><input type="text" class="formField">
-                        <p>ההודעה*</p><input type="text" id="formMsgField">
-                        <input type="checkbox" id="CKstyle"><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
-                        <input type="submit" value="שלח"  id="submitForm">
+                <h1>שלחו לנו מייל</h1>
+                    <form action="#" method="post">
+                        <p>שם פרטי ומשפחה*</p><input type="text" class="formField" name="formFLname"/>
+                        <p>טלפון</p><input type="text" class="formField" name="formPhone"/>
+                        <p>כתובת אי-מייל*</p><input type="text" class="formField" name="formEmail"/>
+                        <p>נושא ההודעה</p><input type="text" class="formField" name="formMsgTitle"/>
+                        <p>ההודעה*</p><input type="text" id="formMsgField" name="formMsgField"/>
+                        <input type="checkbox" id="CKstyle" name="1"/><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
+                        <input type="submit" value="שלח"  id="submitForm" name="formSubmit"/>
                     </form>
             </section>
         </section>
@@ -97,12 +97,12 @@
                 <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
-                <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
+                <p>הפרויקט מפותח במסגרת לימודית בשנקר</p>
             </section>
         </section>
         <nav id="footerNav">
             <ul>
-                <li><a href="#">צור קשר</a></li>
+                <li><a href="conatctForm.html">צור קשר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מפת האתר</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">מוצרים</a></li>
                 <li class="footerNavBorder"><img class="footerNavLine" src="images/footerNavLine.jpg"><a href="#">עולמות תוכן</a></li>
