--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -128,7 +128,7 @@
                 <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
-                <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
+                <p>הפרויקט מפותח במסגרת לימודית בשנקר</p>
             </section>
         </section>
         <nav id="footerNav">
