--- a/systemArticles.html
+++ b/systemArticles.html
@@ -35,26 +35,26 @@
         </nav>
         <div class="clear"></div>
         <section class="contentArticle">
-            <h2 id="articleHeader">מאמרי מערכת</h2>
+            <h1 id="articleHeader">מאמרי מערכת</h1>
             <article id="articleContentStyle1">
-                <img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg">
-                <p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
+                <a href="vacuumCookingMethodArticle.html"><img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg"></a>
+                <a href="vacuumCookingMethodArticle.html"><p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
                 <p class="nextArticle"><a href="vacuumCookingMethodArticle.html">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle2">
-                <img id="articleContentStyle2Img" class="contentPicture" src="images/systemArticlePic2.jpg">
-                <p>זאת הכותרת של המאמר השני</p>
+                <a href="#"><img id="articleContentStyle2Img" class="contentPicture" src="images/systemArticlePic2.jpg"></a>
+                <a href="#"><p>זאת הכותרת של המאמר השני</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
                 <p class="nextArticle"><a href="#">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle3">
-                <img id="articleContentStyle3Img" class="contentPicture" src="images/systemArticlePic3.jpg">
-                <p>זאת הכותרת של המאמר השלישי</p>
+                <a href="#"><img id="articleContentStyle3Img" class="contentPicture" src="images/systemArticlePic3.jpg"></a>
+                <a href="#"><p>זאת הכותרת של המאמר השלישי</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
                 <p class="nextArticle"><a href="#">למאמר המלא</a></p>
@@ -116,7 +116,7 @@
                 <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
-                <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
+                <p>הפרויקט מפותח במסגרת לימודית בשנקר</p>
             </section>
         </section>
         <nav id="footerNav">
