--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -80,13 +80,13 @@
                     <p>הצעת הגשה: מעל עלים טריים.</p>
                 </section>
             <section id="sendRecipes">
-                <p>שלח לנו מתכון!</p>
+                <a href="#">שלח לנו מתכון!</a>
                 <ul>
                     <li><a href="#">הדפסה</a></li>
-                    <img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild">
+                    <li><img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild"></li>
                     <li><a href="fullRiceRecipe.html">הקודם</a></li>
                     <li><a href="coldCoffe.html">הבא</a></li>
-                    <img src="images/orangeArrow.png">
+                    <li><img src="images/orangeArrow.png"></li>
                 </ul>
             </section>
             <div class="clear"></div>
@@ -154,7 +154,7 @@
                 <a href="#"><img src="images/themarkercafelogo.png" class="footerSharingImg" ></a>
             </section>
             <section id="footerCopyrights">
-                <p>עיצוב: דוד חליבה תקשורת חזותית פיתוח:Dynamic Web</p>
+                <p>הפרויקט מפותח במסגרת לימודית בשנקר</p>
             </section>
         </section>
         <nav id="footerNav">
