--- a/systemArticles.html
+++ b/systemArticles.html
@@ -71,13 +71,11 @@
         <nav id="asideNavTopContent">
             <ul>
                 <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
-                <nav id="asideNavCenter1">
-                    <ul>
+                    <ul id="asideNavCenter1">
                         <li><a href="vacuumCookingMethodArticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
                         <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
                         <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
-                </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
