--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -67,6 +67,7 @@
                         <li><span class="control prev"><img src="images/rightBrownArrow.jpg"></span></li>
                         <li><span class="control next"><img src="images/leftBrownArrow.jpg"></span></li>
                     </ul>
+                    <section class = sliderPosition>
                     <section class="maskRecipe">
                         <ul class="imagesRecipe">
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
@@ -75,6 +76,7 @@
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                             <li><img src="images/picsSlider.jpg" class="picsSliderBigImg"></li>
                         </ul>
+                    </section>
                     </section>
                     <div class="clear"></div>
                     <p>הצעת הגשה: מעל עלים טריים.</p>
