--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="includes/style.css">
     <script src="includes/jquery-2.1.1.min.js"></script>
     <script src="includes/slider.js"></script>
+    <script src="includes/marquee.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -66,7 +67,9 @@
     <div class="clear"></div>
     </section>
     <main>
-        <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
+        <section id="marqueeDisplay">
+        <p id="marqueeText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</p>
+        </section>
         <section id="slideshow">
             <section id="slideshowinner">
                 <section class="mask">
