remove / from input command

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <aside>
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTop">
@@ -178,8 +178,8 @@
         <section id="asideContact">
             <p>הירשם לניוזלטר שלנו!</p>
             <form>
-                <input type="text" id="email" class="ContactForm" placeholder="אימייל:" />
-                <input type="text" id="name" class="ContactForm" placeholder="שם:" />
+                <input type="text" id="email" class="ContactForm" placeholder="אימייל:" >
+                <input type="text" id="name" class="ContactForm" placeholder="שם:" >
                 <input type="submit" id="submit" class="ContactForm" value="הרשם" >
             </form>
         </section>
