--- a/vacuumCookingMethodArticle.html
+++ b/vacuumCookingMethodArticle.html
@@ -62,7 +62,7 @@
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTopContent">
