--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -96,7 +96,7 @@
     <aside id="vodkaWatermellonaside">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav class="asideNavTopContentvodkaWatermellon">
