--- a/conatctForm.html
+++ b/conatctForm.html
@@ -39,13 +39,13 @@
             <section id="contactFormAarticleStyle">
                 <h1>שלחו לנו מייל</h1>
                     <form action="#" method="post">
-                        <p>שם פרטי ומשפחה*</p><input type="text" class="formField" name="formFLname"/>
-                        <p>טלפון</p><input type="text" class="formField" name="formPhone"/>
-                        <p>כתובת אי-מייל*</p><input type="text" class="formField" name="formEmail"/>
-                        <p>נושא ההודעה</p><input type="text" class="formField" name="formMsgTitle"/>
-                        <p>ההודעה*</p><input type="text" id="formMsgField" name="formMsgField"/>
-                        <input type="checkbox" id="CKstyle" name="1"/><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
-                        <input type="submit" value="שלח"  id="submitForm" name="formSubmit"/>
+                        <p>שם פרטי ומשפחה*</p><input type="text" class="formField" name="formFLname">
+                        <p>טלפון</p><input type="text" class="formField" name="formPhone">
+                        <p>כתובת אי-מייל*</p><input type="text" class="formField" name="formEmail">
+                        <p>נושא ההודעה</p><input type="text" class="formField" name="formMsgTitle">
+                        <p>ההודעה*</p><input type="text" id="formMsgField" name="formMsgField">
+                        <input type="checkbox" id="CKstyle" name="1"><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
+                        <input type="submit" value="שלח"  id="submitForm" name="formSubmit">
                     </form>
             </section>
         </section>
@@ -53,7 +53,7 @@
     <aside id="asideContactForm">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTop">
