--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -84,7 +84,7 @@
     <aside id="asideFiencook">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTop">
