--- a/fullRiceRecipe.html
+++ b/fullRiceRecipe.html
@@ -97,7 +97,7 @@
     <aside id="vodkaWatermellonaside">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav class="asideNavTopContentvodkaWatermellon">
