--- a/recipes.html
+++ b/recipes.html
@@ -59,7 +59,7 @@
     <aside id="recipeAside">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTopContentRecipe">
