--- a/systemArticles.html
+++ b/systemArticles.html
@@ -65,7 +65,7 @@
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
-                <input type="search" id="search" placeholder="חפש" />
+                <input type="search" id="search" placeholder="חפש" >
             </form>
         </section>
         <nav id="asideNavTopContent">
