dynamic info from json

--- a/coldCoffe.html
+++ b/coldCoffe.html
@@ -86,7 +86,7 @@
                     <li><a href="#">הדפסה</a></li>
                     <li><img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild"></li>
                     <li><a href="vodkaWatermellon.html">הקודם</a></li>
-                    <li><a href="fullRiceRecipe.html">הבא</a></li>
+                    <li><a href="recipePage.html">הבא</a></li>
                     <li><img src="images/orangeArrow.png"></li>
                 </ul>
             </section>
@@ -110,7 +110,7 @@
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
                 <ul id="ulInnerRecipesTermo">
-                    <li><a href="fullRiceRecipe.html"> אורז מלא בלימון ועשבי תיבול</a></li>
+                    <li><a href="recipePage.html"> אורז מלא בלימון ועשבי תיבול</a></li>
                     <li><a href="vodkaWatermellon.html">שאט של וודקה אבטיח</a></li>
                     <li><a href="coldCoffe.html" class="orange">קפה קר ללא לקטוז</a></li>
                     <li><a href="#">דואט קנולי</a></li>
