--- a/recipePage.html
+++ b/recipePage.html
@@ -35,7 +35,7 @@
                 <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="recipes.html">מתכונים</a></li>
                 <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
-                <li><a href="fullRiceRecipe.html" id="orangeRecipesLogo">אורז מלא בלימון ועשבי תיבול</a></li>
+                <li><a href="recipePage.html" id="orangeRecipesLogo">אורז מלא בלימון ועשבי תיבול</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -110,9 +110,9 @@
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
                 <ul id="ulInnerRecipesTermo">
-                    <li><a href="fullRiceRecipe.html" class="orange"> אורז מלא בלימון ועשבי תיבול</a></li>
-                    <li><a href="vodkaWatermellon.html">שאט של וודקה אבטיח</a></li>
-                    <li><a href="coldCoffe.html">קפה קר ללא לקטוז</a></li>
+                    <li><a href="recipePage.html?recipeNum=0" class="orange"> אורז מלא בלימון ועשבי תיבול</a></li>
+                    <li><a href="recipePage.html?recipeNum=1">שאט של וודקה אבטיח</a></li>
+                    <li><a href="recipePage.html?recipeNum=2">קפה קר ללא לקטוז</a></li>
                     <li><a href="#">דואט קנולי</a></li>
                     <li><a href="#">גלילי ביסקוויט שוקולוד</a></li>
                     <li><a href="#">בצק שמרים ללא גלוטן</a></li>
