--- a/recipes.html
+++ b/recipes.html
@@ -42,13 +42,13 @@
                     <span><a href="vodkaWatermellon.html" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
                 </p>
                 <section id="picRecipe">
-                    <a href="fullRiceRecipe.html"><img src="images/termomiksRecipe.jpg"></a>
+                    <a href="recipePage.html"><img src="images/termomiksRecipe.jpg"></a>
                     <a href="#"><img src="images/fiencookRecipe.jpg"></a>
                     <a href="#"><img src="images/slidersRecipe.jpg"></a>
                 </section>
                 <div class="clear"></div>
                 <section id="h3recipetitle">
-                    <h3 class="h3RecipeTitle"><a href="fullRiceRecipe.html">מתכונים לתרמומיקס</a></h3>
+                    <h3 class="h3RecipeTitle"><a href="recipePage.html">מתכונים לתרמומיקס</a></h3>
                     <h3 class="h3RecipeTitle"><a href="#">מתכונים לפיין-קוקר</a></h3>
                     <h3 class="h3RecipeTitle"><a href="#">מתכוני גולשים</a></h3>
                 </section>
@@ -70,7 +70,7 @@
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
             </ul>
             <ul id="ulLastChild">
-                <li><a href="fullRiceRecipe.html"> מתכונים לתרמומיקס</a></li>
+                <li><a href="recipePage.html?recipeNum=0"> מתכונים לתרמומיקס</a></li>
                 <li><a href="#"> מתכונים לפיין-קוקר</a></li>
                 <li><a href="#"> מתכוני גולשים</a></li>
             </ul>
