--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -84,7 +84,7 @@
                 <ul>
                     <li><a href="#">הדפסה</a></li>
                     <li><img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild"></li>
-                    <li><a href="fullRiceRecipe.html">הקודם</a></li>
+                    <li><a href="recipePage.html">הקודם</a></li>
                     <li><a href="coldCoffe.html">הבא</a></li>
                     <li><img src="images/orangeArrow.png"></li>
                 </ul>
@@ -109,7 +109,7 @@
             <ul id="ulLastChild">
                 <li class="orange">מתכונים לתרמומיקס</li>
                 <ul id="ulInnerRecipesTermo">
-                    <li><a href="fullRiceRecipe.html"> אורז מלא בלימון ועשבי תיבול</a></li>
+                    <li><a href="recipePage.html"> אורז מלא בלימון ועשבי תיבול</a></li>
                     <li><a href="vodkaWatermellon.html" class="orange">שאט של וודקה אבטיח</a></li>
                     <li><a href="coldCoffe.html">קפה קר ללא לקטוז</a></li>
                     <li><a href="#">דואט קנולי</a></li>
