--- a/recipePage.html
+++ b/recipePage.html
@@ -85,8 +85,8 @@
                 <ul>
                     <li><a href="#">הדפסה</a></li>
                     <li><img src="images/orangeArrowRight.png" id="sendRecipesUlLiFirstChild"></li>
-                    <li><a href="coldCoffe.html">הקודם</a></li>
-                    <li><a href=vodkaWatermellon.html#">הבא</a></li>
+                    <li id="backPage"></li>
+                    <li id="nextPage"></li>
                     <li><img src="images/orangeArrow.png"></li>
                 </ul>
             </section>
