--- a/recipes.html
+++ b/recipes.html
@@ -48,7 +48,7 @@
                 </section>
                 <div class="clear"></div>
                 <section id="h3recipetitle">
-                    <h3 class="h3RecipeTitle"><a href="recipePage.html">מתכונים לתרמומיקס</a></h3>
+                    <h3 class="h3RecipeTitle"><a href="recipePage.html?recipeNum=0">מתכונים לתרמומיקס</a></h3>
                     <h3 class="h3RecipeTitle"><a href="#">מתכונים לפיין-קוקר</a></h3>
                     <h3 class="h3RecipeTitle"><a href="#">מתכוני גולשים</a></h3>
                 </section>
