delete recipes specific pages

--- a/conatctForm.html
+++ b/conatctForm.html
@@ -67,7 +67,7 @@
         <nav id="asideNavCenter">
             <ul id="asideNavCenterCFormHover">
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
-                <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
+                <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
                 <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
