--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li>
                         <img id="appMenuImg" src="images/appMenu.png">
                         <ul class="sub-menu" id="appMenuWidth">
-                            <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
+                            <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
                             <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
                             <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
                             <li><a href="vacuumCookingMethodArticle.html">מאמרי מערכת</a></li>
@@ -132,7 +132,7 @@
         <section id="contentWorld">
             <h3 class="h3contentWorld">עולמות תוכן</h3>
             <section id="contentPic1">
-                <a href="vodkaWatermellon.html"><img class="contentPic" src="images/contpic1.jpg"></a>
+                <a href="recipePage.html?recipeNum=0"><img class="contentPic" src="images/contpic1.jpg"></a>
                 <p class="contentLinks">התרמומיקס</p>
             </section>
             <section id="contentPic2">
@@ -163,7 +163,7 @@
         <nav id="asideNavCenter">
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
-                <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
+                <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
                 <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
