--- a/recipes.html
+++ b/recipes.html
@@ -39,7 +39,7 @@
             <article id="recipeAarticleStyle">
                 <p id="recipeAarticleStylePara">
                     <span id="bold">מתכון חדש ומומלץ ביותר!</span>
-                    <span><a href="vodkaWatermellon.html" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
+                    <span><a href="recipePage.html?recipeNum=1" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
                 </p>
                 <section id="picRecipe">
                     <a href="recipePage.html"><img src="images/termomiksRecipe.jpg"></a>
