--- a/articlePage.html
+++ b/articlePage.html
@@ -69,7 +69,7 @@
             <ul>
                 <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
                     <ul id="asideNavCenter1">
-                        <li class="currentArticleGreen"><a href="vacuumCookingMethodArticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li class="currentArticleGreen"><a href="articlePage.html?articleNum=0"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
                         <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
                         <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
