--- a/conatctForm.html
+++ b/conatctForm.html
@@ -68,7 +68,7 @@
             <ul id="asideNavCenterCFormHover">
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="articlePage.html?articleNum=0">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
