--- a/systemArticles.html
+++ b/systemArticles.html
@@ -37,11 +37,11 @@
         <section class="contentArticle">
             <h1 id="articleHeader">מאמרי מערכת</h1>
             <article id="articleContentStyle1">
-                <a href="vacuumCookingMethodArticle.html"><img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg"></a>
-                <a href="vacuumCookingMethodArticle.html"><p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
+                <a href="articlePage.html?articleNum=0"><img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg"></a>
+                <a href="articlePage.html?articleNum=0"><p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p></a>
                 <p class="pGreen">27 באוקטובר 2010</p>
                 <p class="regularContent">זהו טקסט התוכן של המאמר הראשון. בטקסט המקוצר הזה המופיע בעמוד הבית יהיה הקדמה לטקסט המורחב שיופיע במהלך הכתבה. על מנת לראות את הכתבה במלואה יש ללחוץ על הקישור שמופיע בסוף הטקסט המקוצר...---></p>
-                <p class="nextArticle"><a href="vacuumCookingMethodArticle.html">למאמר המלא</a></p>
+                <p class="nextArticle"><a href="articlePage.html?articleNum=0">למאמר המלא</a></p>
                 <img class="greenAfixPos" src="images/greenArrow.png">
             </article>
             <article id="articleContentStyle2">
@@ -72,7 +72,7 @@
             <ul>
                 <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
                     <ul id="asideNavCenter1">
-                        <li><a href="vacuumCookingMethodArticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li><a href="articlePage.html?articleNum=0"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
                         <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
                         <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
