--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         <img id="appMenuImg" src="images/appMenu.png">
                         <ul class="sub-menu" id="appMenuWidth">
                             <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
-                            <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
+                            <li class="asideNavCentedot"><a href="articlePage.html?articleNum=0">בישול בואקום</a></li>
                             <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
-                            <li><a href="vacuumCookingMethodArticle.html">מאמרי מערכת</a></li>
+                            <li><a href="articlePage.html?articleNum=0">מאמרי מערכת</a></li>
                             <li><a href="#">סדנאות ואירועים</a></li>
                             <li><a href="#">מוצרים</a></li>
                             <li><a href="recipes.html">מתכונים</a></li>
@@ -117,7 +117,7 @@
                 <p class="systemArticleCotert">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
                 <p class="systemArticleDate">27 באוקטובר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר הראשון. בטקסט המקוצר המופיע בעמוד הבית יוצגו תמיד ארבעת השורות...</p>
-                <p class="articleLink al1"><a href="vacuumCookingMethodArticle.html"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
+                <p class="articleLink al1"><a href="articlePage.html?articleNum=0"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
 
             </article>
             <article class="systemArticle">
@@ -154,7 +154,7 @@
         </section>
         <nav id="asideNavTop">
             <ul>
-                <li><a href="vacuumCookingMethodArticle.html">מאמרי מערכת</a></li>
+                <li><a href="articlePage.html?articleNum=0">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
@@ -164,7 +164,7 @@
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
                 <li class="asideNavCentedot"><a href="recipePage.html?recipeNum=0">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="vacuumCookingMethodArticle.html">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="articlePage.html?articleNum=0">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
