--- a/articlePage.html
+++ b/articlePage.html
@@ -51,9 +51,9 @@
                     <p>בנוסף, הניצולת של השיטה, היעילות בתכנון המלאי והשליטה באופן ההכנה, מצמצמות את הפחת ואת עלויות המזון</p>
                     <p>על מנת לגלות את העולם המופלא של הבישול בואקום ניתן להיעזר בספר הבישול של השף הענק תומס קלר Under Pressure ובספרם של חואן רוקה וסלבדור בורגוס Sous-Vide Cuisine, הניתנים גם הם לרכישה אצלנו בפיינקוק.</p>
                     <section id="vaccumAarticleStyleNextBeforeArticle">
-                        <section id="vaccumAarticleStyleNextBeforeArticleBefore"><a href="#"> למאמר הקודם</a></section>
+                        <section id="vaccumAarticleStyleNextBeforeArticleBefore"></section>
                         <img src="images/greenArrowOppo.png" id="greenArrowImgArticleBefore">
-                        <section id="vaccumAarticleStyleNextBeforeArticleAfter"><a href="#"> למאמר הבא</a></section>
+                        <section id="vaccumAarticleStyleNextBeforeArticleAfter"></section>
                         <img src="images/greenArrow.png" id="greenArrowImgArticleAfter">
                     </section>
             </article>
@@ -68,8 +68,7 @@
         <nav id="asideNavTopContent">
             <ul>
                 <li id="greenFontTitle"><a href="systemArticles.html">מאמרי מערכת</a></li>
-                    <ul id="asideNavCenter1">
-                    </ul>
+                    <ul id="asideNavCenter1"></ul>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html">מתכונים</a></li>
